<resources>
    <string name="app_name">مرئيات اسلامية</string>
    <string name="email">البريد الالكترونى</string>
    <string name="name">الاسم</string>
    <string name="password">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="sign_up">تسجيل جديد</string>
    <string name="forger_password">هل فقدت كلمة المرور ؟</string>
    <string name="or">أو</string>
    <string name="login_with">تسجيل بواسطة</string>
    <string name="real_name">اسم المستخدم</string>
    <string name="user_name">اسم الظهور</string>
    <string name="re_password">تأكيد كلمة المرور</string>
    <string name="re_email">تأكيد البريد الالكترونى</string>
    <string name="gender">الجنس</string>
    <string name="continuee">استمرار</string>
    <string name="male">ذكر</string>
    <string name="female">أنثى</string>
    <string-array name="gender">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
    <string name="agree_to_terms">نعم قرأت ، وأوافق على جميع قوانين موقع مرئيات اسلامية</string>
    <string name="enter_verf_code">تم ارسال رمز التحقق بنجاح الرجاء ادخال الرمز المرسل</string>
    <string name="forget_password">نسيت كلمة المرور</string>
    <string name="internet_connection_failed">فشل الاتصال بالانترنت</string>
    <string name="loading">جار التحميل</string>
    <string name="button_ok">أوكى</string>
    <string name="important_news">أخبار مهمة</string>
    <string name="more">المزيد >></string>
    <string name="search">بحث</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">الاعدادات</string>
    <string name="action_my_account">حسابى</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="username_repeated">اسم المستخدم مكرر</string>
    <string name="appear_repeated">اسم الظهور مكرر</string>
    <string name="uemail_repeated">البريد الالكترونى مكرر</string>
    <string name="main_data">البيانات المطلوبة</string>
    <string name="extra_data">بيانات اضافية</string>
    <string name="various">مواضيع منوعة</string>
    <string name="albums">الألبومات الجديدة</string>
    <string name="neww">المواضيع الجديدة</string>
    <string name="video">الفيديوهات الجديدة</string>
    <string name="news">الأخبار الجديدة</string>
    <string name="fixed">الألبومات المثبتة</string>
    <string name="adviced">برعاية</string>
    <string name="started_date">تاريخ البدء</string>
    <string name="end_date">تاريخ الانتهاء</string>
    <string name="location">المكان</string>
    <string name="location_name">اسم المكان</string>
    <string name="country">الدولة</string>
    <string name="city">المدينة</string>
    <string name="writer">الكاتب</string>
    <string name="contents">محتويات</string>
    <string name="optional_data">البيانات الاضافية</string>
    <string name="send">ارسال</string>
    <string name="style">الستايل الافتراضى</string>
    <string name="date_format">الية التاريخ</string>
    <string name="time_options">فارق التوقيت</string>
    <string name="week_days">بداية الأسبوع</string>
    <string name="complete_month_name">استخدم أسماء الأشهر كاملة</string>
    <string name="complete_month_name_details">إذا كنت قد اخترت آلية التاريخ الهجري .
ملاحظة : هذا سيشمل الأسماء (الكاملة/المختصرة) للأيام والشهور </string>
    <string name="summer_time">تفعيل التوقيت الصيفى</string>
    <string name="summer_time_details">إذا كان التوقيت الصيفي هو المعتمد في المنطقة التي حددتها في خيار فارق التوقيت , فيرجى تفعيل هذا الخيار لكي يظهر الوقت الصحيح في الأخبار/المقالات/التعليقات (إلخ .).</string>
    <string name="error_occured_while_auth">حدث خطأ أثناء التسجيل</string>
    <string name="error_username">يرجى ادخال اسم المستخدم</string>
    <string name="error_appname">يرجى ادخال اسم الظهور</string>
    <string name="error_email">يرجى ادخال البريد الالكترونى</string>
    <string name="error_reemail">يرجى اعادة ادخال البريد الالكترونى</string>
    <string name="error_pass">يرجى ادخال كلمة المرور</string>
    <string name="error_repass">يرجى اعادة ادخال كلمة المرور</string>
    <string name="hello">مرحبا</string>
    <string name="successfully_sign_up">تم التسجيل بنجاح .. يرجى تفعيل الحساب</string>
    <string name="usercode">كود المستخدم</string>
    <string name="my_subjects">مواضيعى</string>
    <string name="add_subject">اضافة موضوع جديد</string>
    <string name="main_category">القسم الرئيسى</string>
    <string name="sub_category">القسم الفرعى</string>
    <string name="address">العنوان</string>
    <string name="sponser">الراعى</string>
    <string name="comments_number">عدد التعليقات</string>
    <string name="watchers_number">عدد المشاهدات</string>
    <string name="appear_arrange">ترتيب الظهور</string>
    <string name="image_sound_video">مسمى الصورة أو الصوت أو الفيديو</string>
    <string name="short_text">نص مختصر</string>
    <string name="status">الحالة</string>
    <string name="viewed">معروض</string>
    <string name="stopped">موقوف</string>
    <string name="image">الصورة</string>
    <string name="sound">الصوت</string>
    <string name="full_text">النص كامل</string>
    <string name="publisher">الناشر</string>
    <string name="published_date">تاريخ النشر</string>
    <string name="image_notice">أنواع الصور png و jpg و gif و bmp  بحجم 10 ميجابايت كحد أقصى</string>
    <string name="voice_notice">أنواع ملف الصوت mp3 بحجم 10 ميجابايت كحد أقصى</string>
    <string name="video_notice">أنواع ملف الفيديو mp4 و 3gp بحجم 10 ميجابايت كحد أقصى</string>
    <string name="error_duplicate_title">خطأ : العنوان مكرر</string>
    <string name="save">حفظ</string>
    <string name="cancel">الغاء</string>
    <string name="subject_added_succs">تم اضافة الموضوع بنجاح</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="comments">التعليقات</string>
    <string name="error_loading_subject">خطأ فى تحميل الموضوع</string>
    <string name="enter_commnent">اضافة تعليق</string>
    <string name="enter_reply">اضافة رد</string>
    <string name="error_while_delete_subject">خطأ أثناء حذف الموضوع</string>
    <string name="successfully_delete_subject">تم حذف الموضوع بنجاح</string>
    <string name="want_to_delete_sub">هل تريد مسح الموضوع ؟</string>
    <string name="uploading">جار الرفع …</string>
    <string name="image_size_large">خطأ : حجم الصورة أكبر من 10 ميجا</string>
    <string name="voice_size_large">خطأ : حجم الملف الصوتى أكبر من 10 ميجا</string>
    <string name="video_size_large">خطأ : حجم الفيديو أكبر من 10 ميجا</string>
    <string name="img_extention_wrong">امتداد الصورة مرفوض</string>
    <string name="voice_extention_wrong">امتداد المف الصوتى مرفوض</string>
    <string name="vido_extention_wrong">امتداد الفيديو مرفوض</string>
    <string name="error_add_comment">خطأ فى اضافة التعليق</string>
    <string name="error_add_reply">خطأ فى اضافة الرد</string>
    <string name="error_upload_img">خطأ فى رفع الصورة</string>
    <string name="error_loading_comments">خطأ فى تحميل التعليقات</string>
    <string name="cooment_added_succ">تم اضافة التعليق بنجاح</string>
    <string name="reactivation">اعادة ارسال رسالة التفعيل</string>
    <string name="activation_msg">تم ارسال رسالة التفعيل بنجاح"n\" يرجى زيارة بريدك الالكترونى و تفعيل الحساب</string>
    <string name="error_upload_voice">خطأ فى رفع ملف الصوت</string>
    <string name="error_upload_video">خطأ فى رفع ملف الفيديو</string>
    <string name="error_add_sub">خطأ فى اضافة الموضوع</string>
    <string name="title_error">يجب ادخال عنوان للموضوع</string>
    <string name="login_visitor">الدخول كزائر</string>
    <string name="error_forget">خطأ فى استعادة كلمة المرور</string>
    <string name="user_data_updated_successfully">تم تعديل البينات بنجاح</string>
    <string name="fb">Facebook</string>
    <string name="mail">Mail</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="whatsapp_error">Whatsapp have not been installed</string>
    <string name="twittererror">Twitter have not been installed</string>
    <string name="fb_error">Facebook have not been installed</string>
    <string name="error">خطأ</string>
    <string name="must_signin">يجب عليك تسجيل الدخول أولا</string>
    <string name="download_img">تحميل الصورة</string>
    <string name="download_voice">تحميل الملف الصوتى</string>
    <string name="download_video">تحميل الفيديو</string>
    <string name="downloading">جار التحميل …</string>
    <string name="error_downloading">خطأ فى التحميل</string>
    <string name="download_successfully">تم التحميل بنجاح</string>
    <string name="share_img">مشاركة الصورة</string>
    <string name="share_video">مشاركة الفيديو</string>
    <string name="sub_title">عنوان الموضوع :</string>
    <string name="sub_text">نص الموضوع :</string>
    <string name="sub_link">رابط الموضوع :</string>
    <string name="succ_add_rating">تم اضافة التقييم بنجاح</string>
    <string name="error_add_rating">خطأ فى اضافة التقييم</string>
    <string name="succ_add_like">تم اضافة الاعجاب بنجاح</string>
    <string name="error_add_like">خطأ فى اضافة الاعجاب</string>
    <string name="already_rated">لقد قمت بالتقييم من قبل</string>
    <string name="error_sending_activation">خطأ فى ارسال رسالة التفعيل</string>


</resources>
