<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_my_subjects"
        android:orderInCategory="100"
        android:title="@string/my_subjects"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_my_account"
        android:orderInCategory="100"
        android:title="@string/action_my_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_subject"
        android:icon="@drawable/ic_add_black_24dp"
        android:orderInCategory="100"
        android:title="@string/add_subject"
        app:showAsAction="ifRoom" />
</menu>
