<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/optional_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/optional_data"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/colorPrimary"/>

    <View
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_3sdp"
        android:layout_gravity="right"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/country_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/country"
        android:textSize="@dimen/_15sdp" />


    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/countries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_gravity="right"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid__accent_stroke" />


    <TextView
        android:id="@+id/style_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/style"
        android:textSize="@dimen/_15sdp" />


    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_gravity="right"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid__accent_stroke" />

    <TextView
        android:id="@+id/date_format_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/date_format"
        android:textSize="@dimen/_15sdp" />


    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/date_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_gravity="right"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid__accent_stroke" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/complete_month_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/_10sdp"
        android:layoutDirection="rtl"
        app:buttonTint="@color/colorPrimary"
        android:text="@string/complete_month_name"/>

    <TextView
        android:id="@+id/complete_month_name_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:text="@string/complete_month_name_details"
        android:textSize="@dimen/_10sdp" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/summer_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/_10sdp"
        android:layoutDirection="rtl"
        app:buttonTint="@color/colorPrimary"
        android:text="@string/summer_time"/>

    <TextView
        android:id="@+id/summer_time_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:text="@string/summer_time_details"
        android:textSize="@dimen/_10sdp" />


    <TextView
        android:id="@+id/time_options_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/time_options"
        android:textSize="@dimen/_15sdp" />


    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/time_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_gravity="right"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid__accent_stroke" />

    <TextView
        android:id="@+id/week_days_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/week_days"
        android:textSize="@dimen/_15sdp" />


    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/week_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_gravity="right"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid__accent_stroke" />

</LinearLayout>