<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layoutDirection="rtl">

            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:text="@string/name"
                android:layout_margin="@dimen/_10sdp"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_solid__accent_stroke"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"/>


            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:text="@string/email"
                android:layout_margin="@dimen/_10sdp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_solid__accent_stroke"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"/>


    <ImageView
        android:id="@+id/add_photo"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/ic_add_a_photo_black_24dp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/prim_stroke_white_solid"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:text="@string/image_notice"
        android:layout_margin="@dimen/_10sdp"/>

    <Button
        android:id="@+id/continuee"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:text="@string/continuee"
        android:background="@drawable/prim_solid"
        android:textColor="@color/white"
        android:layout_margin="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_15sdp"/>

</LinearLayout>