<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white"
      android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/logo"
          android:layout_width="@dimen/_150sdp"
          android:layout_height="@dimen/_150sdp"
          android:layout_marginBottom="@dimen/_15sdp"
          android:layout_marginTop="@dimen/_10sdp"
          android:src="@drawable/logo" />

      <TextView
          android:id="@+id/username_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/_10sdp"
          android:layout_marginRight="@dimen/_10sdp"
          android:text="@string/real_name"
          android:textSize="@dimen/_15sdp" />

      <EditText
          android:id="@+id/username"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_31sdp"
          android:layout_margin="@dimen/_10sdp"
          android:background="@drawable/white_solid__accent_stroke"
          android:paddingLeft="3dp"
          android:paddingRight="3dp"
          android:inputType="textPersonName"
          android:textColor="@color/black"
          android:textSize="@dimen/_15sdp" />

      <TextView
          android:id="@+id/password_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/_10sdp"
          android:layout_marginRight="@dimen/_10sdp"
          android:text="@string/password"
          android:textSize="@dimen/_15sdp" />

      <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_31sdp"
          android:layout_margin="@dimen/_10sdp"
          android:background="@drawable/white_solid__accent_stroke"
          android:paddingLeft="3dp"
          android:inputType="textPassword"
          android:paddingRight="3dp"
          android:textColor="@color/black"
          android:textSize="@dimen/_15sdp" />

      <Button
          android:id="@+id/btn_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_17sdp"
          android:background="@drawable/prim_solid"
          android:text="@string/login"
          android:textColor="@color/white"
          android:textSize="@dimen/_18sdp" />

      <Button
          android:id="@+id/btn_login_visitor"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/_10sdp"
          android:layout_marginRight="@dimen/_30sdp"
          android:layout_marginLeft="@dimen/_30sdp"
          android:background="@drawable/prim_dark_solid"
          android:text="@string/login_visitor"
          android:textSize="@dimen/_18sdp" />

      <TextView
          android:id="@+id/txt_forget_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/_10sdp"
          android:layout_marginRight="@dimen/_10sdp"
          android:text="@string/forger_password"
          android:textSize="@dimen/_15sdp" />

      <Button
          android:id="@+id/btn_sign_up"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/_10sdp"
          android:layout_marginRight="@dimen/_10sdp"
          android:layout_marginBottom="@dimen/_20sdp"
          android:layout_marginTop="@dimen/_20sdp"
          android:background="@drawable/prim_stroke_white_solid"
          android:text="@string/sign_up"
          android:textColor="@color/colorPrimary"
          android:textSize="@dimen/_18sdp" />

    </LinearLayout>

  </android.support.v4.widget.NestedScrollView>

  <ProgressBar
      android:id="@+id/progress"
      android:layout_width="@dimen/_100sdp"
      android:layout_height="@dimen/_100sdp"
      android:layout_gravity="center"
      android:padding="@dimen/_10sdp"
      android:theme="@style/MyAlertDialogStyle"
      android:background="@drawable/accent_solid"/>

</android.support.design.widget.CoordinatorLayout>
