<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp"/>

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_point_to_right"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_15sdp"/>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/passsword_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/password"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_31sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid__accent_stroke"
        android:inputType="textPassword"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/re_passsword_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/re_password"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_31sdp"
        android:layout_margin="@dimen/_10sdp"
        android:inputType="textPassword"
        android:background="@drawable/white_solid__accent_stroke"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />


    <Button
        android:id="@+id/continuee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/prim_solid"
        android:text="@string/continuee"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp" />

</LinearLayout>